# request-integrator

./: Dockerfile  LICENSE  docker-compose.yaml  pyproject.toml
app/: config.py  main.py
app/routers/: __init__.py  integrator.py
